--- a/public/style.css
+++ b/public/style.css
@@ -1,108 +1,4 @@
-html, body {
-    height: 100%;
-}
-@media (max-width: 800px){
-    main {
-        display: grid!important;
-        position: absolute;
-        align-items: center;
-        width: 98%;
-        height: 98%;
-        margin: 1% 1% 1% 1%;
-        left: 0;
-        top: 0;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr .5fr 5fr .5fr .5fr;
-        grid-template-areas:
-            "time_select time_select time_select time_select"
-            "type_select type_select type_select type_select"
-            "de en in an"
-            "download download download download"
-            "status status status status"
-            "keys keys ban ban"
-            "power power logout logout";
-    }
-
-    #download {
-        margin: 25vw;
-        height: 48vw;
-        border-radius: 50%;
-        grid-area: download;
-    }
-}
-@media (min-width: 800px){
-    main {
-        display: grid!important;
-        position: absolute;
-        align-items: center;
-        width: 98%;
-        height: 98%;
-        margin: 1% 1% 1% 1%;
-        left: 0;
-        top: 0;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 10fr 1fr 1fr;
-        grid-template-areas:
-            "en download download download"
-            "de download download download"
-            "in download download download"
-            "an download download download"
-            "time_select time_select time_select time_select"
-            "type_select type_select type_select type_select"
-            "... ... ... ..."
-            "status status keys ban"
-            "power power logout logout";
-    }
-    #download {
-        justify-self: center;
-        width: 100%;
-        height: calc(100vw / 6);
-        border-radius: calc(100vw / 6);
-        width: calc(100vw / 6);
-        grid-area: download;
-    }
-}
-#time_select{
-    grid-area: time_select;
-    width: 100%;
-    text-align: center;
-}
-#de {
-    grid-area: de;
-}
-#en {
-    grid-area: en;
-}
-#in {
-    grid-area: in;
-}
-#an {
-    grid-area: an;
-}
-#date_select {
-    width: 100%;
-    grid-area: date_select;
-}
-#type_select {
-    width: 100%;
-    grid-area: type_select;
-}
-#status {
-    grid-area: status;
-    margin: 1vw;
-}
-#keys, #logout, #power, #de, #en, #in, #an, #ban{
-    margin: 1vw;
-}
-#ban {
-    grid-area: ban;
-}
-#keys {
-    grid-area: keys;
-}
-#logout {
-    grid-area: logout;
-}
-#power {
-    grid-area: power;
+a, a:hover{
+  text-decoration: none!important;
+  color: inherit!important;
 }
